[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://TrajectoryFollowingResults.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 562.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Trajectory Following Results"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 40 )

[node name="Smoothness" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 62.0
margin_right = 330.0
margin_bottom = 76.0
text = "Smoothness: "
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 80.0
margin_right = 330.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 10 )

[node name="AvgSpeed" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 94.0
margin_right = 330.0
margin_bottom = 108.0
text = "Average Speed: "
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 112.0
margin_right = 330.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 10 )

[node name="OutofBounds" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 126.0
margin_right = 330.0
margin_bottom = 140.0
text = "% Out of Bounds: "
align = 1

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 144.0
margin_right = 330.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 228.0
margin_right = 330.0
margin_bottom = 248.0
alignment = 1

[node name="TaskButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 132.0
margin_bottom = 20.0
text = "Back to Task"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 186.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="MenuButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 289.0
margin_bottom = 20.0
text = "Back to Menu"
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/TaskButton" to="." method="_on_TaskButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
